# BuildmLearn-Toolkit

./: .gitignore  BuildmLearn-Toolkit.pro  CMakeLists.txt  CMakeLists.txt.user.4ff1a76  CMakeLists.txt.user.fafcf01  Doxyfile  GlobalData.cpp  INSTALL.md  InfoTemplate.cpp  InfoTemplate.h  LICENSE.txt  QuestionItem.cpp  QuestionItem.h  QuizTemplate.cpp  QuizTemplate.h  README.md  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  newprojectwidget.h  readme.md  readme.txt
buildmlearn-toolkit-src/: BuildmLearn-Toolkit.pro  FlashcardTemplate.cpp  FlashcardTemplate.h  GlobalData.cpp  GlobalData.h  InfoTemplate.cpp  InfoTemplate.h  LICENSE.txt  QuestionItem.cpp  QuestionItem.h  QuizTemplate.cpp  QuizTemplate.h  main.cpp  mainwindow.cpp  mainwindow.h  newprojectwidget.cpp  newprojectwidget.h
docs/: annotated.html  annotated.js  application_8cpp_source.html  application_8h_source.html  basenetworkaccessmanager_8cpp_source.html  basenetworkaccessmanager_8h_source.html  basicmlearningcore_8cpp_source.html  basicmlearningcore_8h_source.html  basicmlearningeditor_8cpp_source.html  basicmlearningeditor_8h_source.html  basicmlearningentrypoint_8cpp_source.html  basicmlearningentrypoint_8h_source.html  basicmlearningitem_8cpp_source.html  basicmlearningitem_8h_source.html  basicmlearningsimulator_8cpp_source.html  basicmlearningsimulator_8h_source.html  classApplication-members.html  classApplication.html  classApplication.js  classApplication__inherit__graph.map  classApplication__inherit__graph.md5  classApplication_a0762f85fbec5968aaa441e4f6ddad749_cgraph.map  classApplication_a0762f85fbec5968aaa441e4f6ddad749_cgraph.md5  classApplication_a0762f85fbec5968aaa441e4f6ddad749_icgraph.map  classApplication_a0762f85fbec5968aaa441e4f6ddad749_icgraph.md5  classApplication_a1dd271254dd68afa548999e37cbeca27_cgraph.map  classApplication_a1dd271254dd68afa548999e37cbeca27_cgraph.md5  classApplication_a2fcefcd0be7d65ca7be0a43269c3f542_cgraph.map  classApplication_a2fcefcd0be7d65ca7be0a43269c3f542_cgraph.md5  classApplication_a2fcefcd0be7d65ca7be0a43269c3f542_icgraph.map  classApplication_a2fcefcd0be7d65ca7be0a43269c3f542_icgraph.md5  classApplication_a3b70c8738e05c665d39c9ccb97f85f06_cgraph.map  classApplication_a3b70c8738e05c665d39c9ccb97f85f06_cgraph.md5  classApplication_a4c2da9a3700b41120a98794237af5072_cgraph.map  classApplication_a4c2da9a3700b41120a98794237af5072_cgraph.md5  classApplication_a8ece375a09251ccae4d479d034c4fa2b_cgraph.map  classApplication_a8ece375a09251ccae4d479d034c4fa2b_cgraph.md5  classApplication_a8ece375a09251ccae4d479d034c4fa2b_icgraph.map  classApplication_a8ece375a09251ccae4d479d034c4fa2b_icgraph.md5  classApplication_ad7e1f4961d50558b9ae9ff667857cb36_cgraph.map  (+926 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  functions_0.js  functions_1.js  functions_11.js  functions_12.js  functions_13.js  (+23 more)
localization/: buildmlearn-toolkit-en_GB.ts  buildmlearn-toolkit-hi_IN.ts
playground/: readme.txt
resources/design/: buildmlearn-toolkit.eap
resources/desktop/: buildmlearn-toolkit.desktop.in
resources/documentation/: Doxyfile.in
resources/executable_properties/: buildmlearn-toolkit_os2.rc.in  buildmlearn-toolkit_win.rc.in
resources/graphics/: buildmlearn-toolkit-banner.psd  buildmlearn-toolkit.icns
resources/macosx/: Info.plist~  buildmlearn-toolkit.icns
resources/nsis/: NSIS.definitions.nsh.in  NSIS.template.in
resources/skins/base/: greeen.xml  vergilius.xml
resources/templates/flashcard/: FlashCardTemplateApp.apk
resources/templates/learnspellings/: LearnSpellingsApp.apk
resources/templates/matchthefollowing/: MatchTheFollowingTemplateApp.apk
resources/text/: CHANGELOG  LICENSE  UPDATES
src/: FlashcardTemplate.cpp  FlashcardTemplate.h  GlobalData.cpp  InfoTemplate.cpp  InfoTemplate.h  QuestionItem.cpp  QuestionItem.h  QuizTemplate.cpp  QuizTemplate.h  images.qrc  main.cpp  mainwindow.cpp  newprojectwidget.cpp  newprojectwidget.h
src/core/: templatecore.cpp  templatecore.h  templateeditor.cpp  templateeditor.h  templateentrypoint.cpp  templateentrypoint.h  templatefactory.cpp  templatefactory.h  templategenerator.cpp  templategenerator.h  templatesimulator.cpp  templatesimulator.h
src/definitions/: definitions.h.in
src/dynamic-shortcuts/: dynamicshortcuts.cpp  dynamicshortcuts.h  dynamicshortcutswidget.cpp  dynamicshortcutswidget.h  shortcutbutton.cpp  shortcutbutton.h  shortcutcatcher.cpp  shortcutcatcher.h
src/gui/: custommessagebox.cpp  custommessagebox.h  formabout.cpp  formabout.h  formabout.ui  formhelp.cpp  formhelp.h  formhelp.ui  formmain.cpp  formmain.h  formmain.ui  formnewproject.cpp  formnewproject.cpp.old  formnewproject.h  formnewproject.h.old  formnewproject.ui  formsettings.cpp  formsettings.h  formsettings.ui  formsimulator.cpp  formsimulator.h  formsimulator.ui  formupdate.cpp  formupdate.h  formupdate.ui  formuploadbundle.cpp  formuploadbundle.h  formuploadbundle.ui  labelwithstatus.cpp  labelwithstatus.h  lineeditwithstatus.cpp  lineeditwithstatus.h  maxlengthtextedit.cpp  maxlengthtextedit.h  messagebox.cpp  messagebox.h  plaintoolbutton.cpp  plaintoolbutton.h  systemtrayicon.cpp  systemtrayicon.h  (+2 more)
src/miscellaneous/: application.cpp  application.h  debugging.cpp  debugging.h  iconfactory.cpp  iconfactory.h  iofactory.cpp  iofactory.h  localization.cpp  localization.h  settings.cpp  settings.h  skinfactory.cpp  skinfactory.h  storefactory.cpp  storefactory.h  systemfactory.cpp  systemfactory.h  textfactory.cpp  textfactory.h
src/network-web/: basenetworkaccessmanager.cpp  basenetworkaccessmanager.h  downloader.cpp  downloader.h  networkfactory.cpp  networkfactory.h  silentnetworkaccessmanager.cpp  silentnetworkaccessmanager.h  webfactory.cpp  webfactory.h
(+132 files in other folders)
